# oneshot

./: BDBExample.java  CMakeLists.txt  DevNullServer.java  Dockerfile  JWget.java  LICENSE  QueueFile.java  README.md  Search.proto  SyBlaster.py  Trampoline.java  Vagrantfile  VelocityTmpl.java  WordCountHadoop.java  bdb-kv.py  bond.go  build.sbt  caesar_decipherer.py  canvas.html  catpdf.sh  disassemble.sh  dsc.go  exprotobuf.cc  faraday-downloader.rb  fide-scrap.py  fsync.c  git-notes.txt  glog.cpp  grpex.go  hasher.go  hhdb.go  hibernate.cfg.xml  http.c  httpserver.go  layout.html  leveldb.cpp  liquibase.properties  memcached.thrift  migrations.xml  muxer.c  (+29 more)
css/: index.html  tutorial.css
dbfs/: fs.go  spec.yaml
downloader/: downloader.go  downloader2.go  downloader3.go  downloader4.go  resolver.go  sampler.go
lisp/: ask.lisp  boat.lisp  cat.lisp  cddb.lisp  grammar.lisp  grammar2.lisp  routes.lisp  summit.lisp
mokadb/: Makefile  mokasql.y
rats/: config.ru  crawler-tornado.py  crawler.py  crawler.rb  rats.py  rss-small.txt  server.py  server.rb
toyq/: config.json  toyq.go
workervm/: .vagrant  Vagrantfile  server.py
workervm/hworker/: finish  run
workervm/hworker/log/: run
